--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   background-image: linear-gradient(to right, #56CCF2, #2F80ED);
 }
 
 .box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.6);
-  padding: 15px;
+  padding: 20px;
   border-radius: 15px;
-  width: 25%;
   color: white;
+  width: 300px;
 }
 
 fieldset {
